--- a/timproject/blog/templates/detail.html
+++ b/timproject/blog/templates/detail.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %} <!--base.html 상속하겠다~-->
+{% block content %} <!--독립적인 내용의 시작-->
     <h1>It's detail page</h1>
     <h1>{{blog.title}}</h1>
     <p>{{blog.pub_date}} </p>
@@ -14,5 +7,4 @@
     <a href="{% url 'home' %}">뒤로가기</a>
     <a href="{% url 'delete' blog.id %}">삭제</a>
     <a href="{% url 'edit' blog.id %}">수정</a>
-</body>
-</html>
+{% endblock %} <!--독립적인 내용의 끝-->
