--- a/timproject/blog/templates/edit.html
+++ b/timproject/blog/templates/edit.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class = 'container'>
+{% extends 'base.html' %} <!--base.html 상속하겠다~-->
+{% block content %} <!--독립적인 내용의 시작-->
         <h1>수정 페이지</h1>
         <form action="{% url 'update' blog.id %}" method = "POST">
             {% csrf_token %}
@@ -19,6 +11,4 @@
             <br><br>
             <input type="submit" value="제출하기">
         </form>
-    </div>
-</body>
-</html>
+{% endblock %} <!--독립적인 내용의 끝-->
