--- a/timproject/blog/templates/new.html
+++ b/timproject/blog/templates/new.html
@@ -1,4 +1,5 @@
-<div class = 'container'>
+{% extends 'base.html' %} <!--base.html 상속하겠다~-->
+{% block content %} <!--독립적인 내용의 시작-->
     <form action="{% url 'create' %}" method = "GET">
         <h4>제목: </h4>
         <input type="text" name='title'>
@@ -8,4 +9,4 @@
         <br><br>
         <input type="submit" value='제출하기'> 
     </form>
-</div>
+{% endblock %} <!--독립적인 내용의 끝-->
